<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#71BCFA"
        android:padding="6dip" >

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="0.12"
            android:text="@string/mobile_services"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ProgressBar
            android:id="@+id/loadingProgressBar"
            android:layout_width="28dp"
            android:layout_height="28dp" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewToDo"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        tools:listitem="@layout/row_list_to_do"
        android:padding="6dip" >

    </ListView>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="351dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/dateLabel"
                android:layout_weight="1"
                android:id="@+id/dateTextView"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Select Date"
                android:layout_weight="1"
                android:id="@+id/dateButton"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sleepLabel"
                android:layout_weight="1"
                android:id="@+id/sleepTextView"
                />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/sleepSpinner"
                android:layout_weight="1"
                android:spinnerMode="dropdown"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/wineGlassesLabel"
                android:layout_weight="1"
                android:id="@+id/wineGlassesTextView"
                />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/wineGlessesSpinner"
                android:layout_weight="1"
                android:spinnerMode="dropdown"/>

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/activityLabel"
                android:layout_weight="1"
                android:id="@+id/activityTextView"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textActivity"
                android:layout_weight="1"
                android:inputType="number"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/submit"
                android:id="@+id/submitButton"
                android:onClick="addUpdateItem"/>
        </TableRow>


    </TableLayout>

</LinearLayout>
